--- a/VoteChain/app/src/main/AndroidManifest.xml
+++ b/VoteChain/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CategoriesActivity"/>
+        <activity android:name=".VotingActivity"></activity>
+        <activity android:name=".CategoriesActivity" />
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
